--- a/tests/ui/arg_required_else_help_stderr.toml
+++ b/tests/ui/arg_required_else_help_stderr.toml
@@ -5,15 +5,15 @@ stdout = ""
 stderr = """
 stdio-fixture 1.0
 
-USAGE:
+Usage:
     stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
 
-OPTIONS:
+Options:
         --verbose    log
     -h, --help       Print help information
     -V, --version    Print version information
 
-SUBCOMMANDS:
+Subcommands:
     more    
     help    Print this message or the help of the given subcommand(s)
 """
