--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -7,7 +7,7 @@ error: Found argument '--unknown-argument' which wasn't expected, or isn't valid
 
 \tIf you tried to supply `--unknown-argument` as a value rather than a flag, use `-- --unknown-argument`
 
-USAGE:
+Usage:
     stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
 
 For more information try --help
