--- a/tests/ui/h_flag_stdout.toml
+++ b/tests/ui/h_flag_stdout.toml
@@ -4,15 +4,15 @@ status.code = 0
 stdout = """
 stdio-fixture 1.0
 
-USAGE:
+Usage:
     stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
 
-OPTIONS:
+Options:
         --verbose    log
     -h, --help       Print help information
     -V, --version    Print version information
 
-SUBCOMMANDS:
+Subcommands:
     more    
     help    Print this message or the help of the given subcommand(s)
 """
