fix(help): Use Command in place of Subcommand
In switching to title case for help headings (#4123), it caused me to
look at "subcommand" in a fresh light.  I can't quite put my finger on
it but "Subcommand" looks a bit sloppy.  I also have recently been
surveying other CLIs and they just use "command" as well.

All of them are commands anyways, just some are children of others
(subcommands) while others are not (root or top-level commands, or just
command).  Context is good enough for clarifying subcommands from root
commands.

This is part of #4132

--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -8,7 +8,7 @@ error: Found argument '--unknown-argument' which wasn't expected, or isn't valid
 \tIf you tried to supply `--unknown-argument` as a value rather than a flag, use `-- --unknown-argument`
 
 Usage:
-    stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
+    stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
 For more information try --help
 """
