--- a/tests/ui/arg_required_else_help_stderr.toml
+++ b/tests/ui/arg_required_else_help_stderr.toml
@@ -6,9 +6,9 @@ stderr = """
 stdio-fixture 1.0
 
 Usage:
-    stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
+    stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
-Subcommands:
+Commands:
     more    
     help    Print this message or the help of the given subcommand(s)
 
