--- a/tests/ui/h_flag_stdout.toml
+++ b/tests/ui/h_flag_stdout.toml
@@ -5,9 +5,9 @@ stdout = """
 stdio-fixture 1.0
 
 Usage:
-    stdio-fixture[EXE] [OPTIONS] [SUBCOMMAND]
+    stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
-Subcommands:
+Commands:
     more    
     help    Print this message or the help of the given subcommand(s)
 
