--- a/tests/ui/h_flag_stdout.toml
+++ b/tests/ui/h_flag_stdout.toml
@@ -13,7 +13,7 @@ Commands:
 
 Options:
         --verbose    log
-    -h, --help       Print help information
+    -h, --help       Print help information (use `--help` for more detail)
     -V, --version    Print version information
 """
 stderr = ""
