--- a/tests/ui/help_flag_stdout.toml
+++ b/tests/ui/help_flag_stdout.toml
@@ -18,7 +18,7 @@ Options:
             more log
 
     -h, --help
-            Print help information
+            Print help information (use `-h` for a summary)
 
     -V, --version
             Print version information
