--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "clap_derive"
-version = "4.0.0-alpha.0"
+version = "4.0.0-rc.1"
 description = "Parse command line argument by defining a struct, derive crate."
 repository = "https://github.com/clap-rs/clap/tree/master/clap_derive"
 categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
