--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -40,7 +40,7 @@ pre-release-replacements = [
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std"] }
+clap = { path = "../", version = "4.0.0", default-features = false, features = ["std"] }
 clap_lex = { path = "../clap_lex", version = "0.3.0", optional = true }
 is_executable = { version = "1.0.1", optional = true }
 os_str_bytes = { version = "6.0", default-features = false, features = ["raw_os_str"], optional = true }
@@ -52,7 +52,7 @@ unicode-xid = { version = "0.2.2", optional = true }
 snapbox = { version = "0.4", features = ["diff"] }
 # Cutting out `filesystem` feature
 trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
-clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std", "derive", "help"] }
+clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "derive", "help"] }
 
 [[example]]
 name = "dynamic"
