--- a/clap_complete_fig/Cargo.toml
+++ b/clap_complete_fig/Cargo.toml
@@ -39,9 +39,9 @@ pre-release-replacements = [
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std"] }
-clap_complete = { path = "../clap_complete", version = "4.0.0-alpha.0" }
+clap = { path = "../", version = "4.0.0", default-features = false, features = ["std"] }
+clap_complete = { path = "../clap_complete", version = "4.0.0" }
 
 [dev-dependencies]
 snapbox = { version = "0.4", features = ["diff"] }
-clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std", "help"] }
+clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
