fix(help): Use single quotes in -h/--help help
Use single quotes around the strings `-h` and `--help` in help output.
This is more consistent and improves readability a bit.

--- a/tests/ui/help_cmd_stdout.toml
+++ b/tests/ui/help_cmd_stdout.toml
@@ -15,7 +15,7 @@ Options:
           more log
 
   -h, --help
-          Print help information (use `-h` for a summary)
+          Print help information (use '-h' for a summary)
 
   -V, --version
           Print version information
