--- a/tests/ui/help_flag_stdout.toml
+++ b/tests/ui/help_flag_stdout.toml
@@ -15,7 +15,7 @@ Options:
           more log
 
   -h, --help
-          Print help information (use `-h` for a summary)
+          Print help information (use '-h' for a summary)
 
   -V, --version
           Print version information
