--- a/tests/ui/h_flag_stdout.toml
+++ b/tests/ui/h_flag_stdout.toml
@@ -10,7 +10,7 @@ Commands:
 
 Options:
       --verbose  log
-  -h, --help     Print help information (use '--help' for more detail)
+  -h, --help     Print help ('--help' for more)
   -V, --version  Print version information
 """
 stderr = ""
