--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "clap_complete_nushell"
 authors = [ "nibon7 <nibon7@163.com>" ]
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 license = "MIT"
 description = "A generator library used with clap for Nushell completion scripts"
+homepage = "https://github.com/nibon7/clap_complete_nushell"
 repository = "https://github.com/nibon7/clap_complete_nushell"
 readme = "./README.md"
 categories = ["command-line-interface"]
