--- a/clap_mangen/Cargo.toml
+++ b/clap_mangen/Cargo.toml
@@ -45,7 +45,7 @@ clap = { path = "../", version = "4.0.0", default-features = false, features = [
 
 [dev-dependencies]
 snapbox = { version = "0.4", features = ["diff"] }
-clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help"] }
+clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help", "derive"] }
 
 [features]
 default = []
