fix(error): Lowercase the start of error messages
This matches the rustc error style

--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -3,7 +3,7 @@ args = ["--unknown-argument"]
 status.code = 2
 stdout = ""
 stderr = """
-error: Found argument '--unknown-argument' which wasn't expected, or isn't valid in this context
+error: found argument '--unknown-argument' which wasn't expected, or isn't valid in this context
 
 Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
