--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -7,5 +7,5 @@ error: found argument '--unknown-argument' which wasn't expected, or isn't valid
 
 Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
-For more information try '--help'
+For more information, try '--help'.
 """
