--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ pre-release-replacements = [
   {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
   {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
   {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap/compare/{{tag_name}}...HEAD", exactly=1},
+  {file="CITATION.cff", search="^date-released: ....-..-..", replace="date-released: {{date}}"},
+  {file="CITATION.cff", search="^version: .+\\..+\\..+", replace="version: {{version}}"},
 ]
 
 [features]
