--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,16 +62,9 @@ pre-release-replacements = [
 ]
 
 [features]
-default = [
-  "std",
-  "color",
-  "help",
-  "usage",
-  "error-context",
-  "suggestions",
-]
+default = ["std", "color", "help", "usage", "error-context", "suggestions"]
 debug = ["clap_derive?/debug", "dep:backtrace"] # Enables debug messages
-unstable-doc = ["derive", "cargo", "wrap_help", "env", "unicode", "string", "unstable-replace"] # for docs.rs
+unstable-doc = ["derive", "cargo", "wrap_help", "env", "unicode", "string", "o1", "unstable-replace"] # for docs.rs
 
 # Used in default
 std = [] # support for no_std in a backwards-compatible way
@@ -89,6 +82,7 @@ wrap_help = ["help", "dep:terminal_size"]
 env = [] # Use environment variables during arg parsing
 unicode = ["dep:unicode-width", "dep:unicase"]  # Support for unicode characters in arguments and help messages
 string = []  # Allow runtime generated strings
+o1 = ["dep:indexmap"]  # Switch data structures from O(n) operations to O(1) operations
 
 # In-work features
 unstable-replace = []
@@ -110,6 +104,7 @@ terminal_size = { version = "0.2.1", optional = true }
 backtrace = { version = "0.3.67", optional = true }
 unicode-width = { version = "0.1.9", optional = true }
 once_cell = { version = "1.12.0", optional = true }
+indexmap = { version = "1.9.2", optional = true, features = ["std"] }
 
 [dev-dependencies]
 trybuild = "1.0.77"
