--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -35,7 +35,6 @@ bench = false
 clap = { path = "../", version = "4.1.0", default-features = false, features = ["std"] }
 clap_lex = { path = "../clap_lex", version = "0.3.0", optional = true }
 is_executable = { version = "1.0.1", optional = true }
-os_str_bytes = { version = "6.0.0", default-features = false, features = ["raw_os_str"], optional = true }
 pathdiff = { version = "0.2.1", optional = true }
 shlex = { version = "1.1.0", optional = true }
 unicode-xid = { version = "0.2.2", optional = true }
@@ -52,5 +51,5 @@ required-features = ["unstable-dynamic"]
 
 [features]
 default = []
-unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:unicode-xid", "dep:os_str_bytes", "clap/derive", "dep:is_executable", "dep:pathdiff"]
+unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:unicode-xid", "clap/derive", "dep:is_executable", "dep:pathdiff"]
 debug = ["clap/debug"]
