--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -32,7 +32,7 @@ tag-name = "v{{version}}"
 [features]
 default = ["std", "color", "help", "usage", "error-context", "suggestions"]
 debug = ["dep:backtrace"] # Enables debug messages
-unstable-doc = ["cargo", "wrap_help", "env", "unicode", "string", "unstable-replace"] # for docs.rs
+unstable-doc = ["cargo", "wrap_help", "env", "unicode", "string"] # for docs.rs
 
 # Used in default
 std = [] # support for no_std in a backwards-compatible way
@@ -51,7 +51,6 @@ unicode = ["dep:unicode-width", "dep:unicase"]  # Support for unicode characters
 string = []  # Allow runtime generated strings
 
 # In-work features
-unstable-replace = []
 unstable-v5 = ["deprecated"]
 
 [lib]
