--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,8 @@
-[package]
-name = "PROJECT"
-version = "0.0.1"
-description = "DESCRIPTION"
+[workspace]
+resolver = "2"
+
+[workspace.package]
 license = "MIT OR Apache-2.0"
-categories = []
-keywords = []
 edition = "2021"
 rust-version = "1.65.0"  # MSRV
 include = [
@@ -16,6 +14,17 @@ include = [
   "benches/**/*",
   "examples/**/*"
 ]
+
+[package]
+name = "PROJECT"
+version = "0.0.1"
+description = "DESCRIPTION"
+categories = []
+keywords = []
+license.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+include.workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
