--- a/clap_builder/Cargo.toml
+++ b/clap_builder/Cargo.toml
@@ -35,8 +35,8 @@ debug = ["dep:backtrace"] # Enables debug messages
 unstable-doc = ["cargo", "wrap_help", "env", "unicode", "string"] # for docs.rs
 
 # Used in default
-std = [] # support for no_std in a backwards-compatible way
-color = ["dep:anstyle", "dep:anstream"]
+std = ["anstyle/std"] # support for no_std in a backwards-compatible way
+color = ["dep:anstream"]
 help = []
 usage = []
 error-context = []
@@ -62,7 +62,7 @@ bitflags = "1.2.0"
 unicase = { version = "2.6.0", optional = true }
 strsim = { version = "0.10.0",  optional = true }
 anstream = { version = "0.3.0", optional = true }
-anstyle = { version = "1.0.0", features = ["std"], optional = true }
+anstyle = "1.0.0"
 terminal_size = { version = "0.2.1", optional = true }
 backtrace = { version = "0.3.67", optional = true }
 unicode-width = { version = "0.1.9", optional = true }
