--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -34,6 +34,7 @@
         'rust',
       ],
       stabilityDays: "126 days",  // 3 releases * 6 weeks per release * 7 days per week
+      internalChecksFilter: "strict",
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
