--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -10,9 +10,12 @@ repository:
   has_downloads: true
   default_branch: main
 
-  allow_squash_merge: true
+  # Preference: people do clean commits
   allow_merge_commit: true
-  allow_rebase_merge: true
+  # Backup in case we need to clean up commits
+  allow_squash_merge: true
+  # Not really needed
+  allow_rebase_merge: false
 
   allow_auto_merge: true
   delete_branch_on_merge: true
