--- a/tests/ui/help_cmd_stdout.toml
+++ b/tests/ui/help_cmd_stdout.toml
@@ -5,10 +5,8 @@ stdout = """
 Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
 Commands:
-  more
-          
-  help
-          Print this message or the help of the given subcommand(s)
+  more  
+  help  Print this message or the help of the given subcommand(s)
 
 Options:
       --verbose
