--- a/release.toml
+++ b/release.toml
@@ -1,3 +1,3 @@
-owners = ["clap-rs:Admins", "rust-cli:Maintainers"]
+owners = ["github:clap-rs:Admins", "github:rust-cli:Maintainers"]
 dependent-version = "fix"
 allow-branch = ["master", "v*-master"]
