--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,9 @@ clap_complete = "4.0"
 
 [dev-dependencies]
 snapbox = { version = "0.4", features = ["diff"] }
+nu-cli = "0.80.0"
+nu-command = "0.80.0"
+nu-parser = "0.80.0"
+nu-protocol = "0.80.0"
+nu-test-support = "0.80.0"
+reedline = "0.19.1"
