--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "clap_complete_nushell"
 authors = [ "nibon7 <nibon7@163.com>" ]
 version = "0.1.10"
 edition = "2021"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 description = "A generator library used with clap for Nushell completion scripts"
 homepage = "https://github.com/nibon7/clap_complete_nushell"
 repository = "https://github.com/nibon7/clap_complete_nushell"
