--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -32,7 +32,8 @@ pre-release-replacements = [
 bench = false
 
 [dependencies]
-clap = { path = "../", version = "4.1.0", default-features = false, features = ["std"] }
+clap_builder = { path = "../clap_builder", default-features = false, features = ["std"] }
+clap_derive = { path = "../clap_derive", version = "4.3.1", optional = true }
 clap_lex = { path = "../clap_lex", version = "0.5.0", optional = true }
 is_executable = { version = "1.0.1", optional = true }
 pathdiff = { version = "0.2.1", optional = true }
@@ -43,7 +44,7 @@ unicode-xid = { version = "0.2.2", optional = true }
 snapbox = { version = "0.4.11", features = ["diff"] }
 # Cutting out `filesystem` feature
 trycmd = { version = "0.14.16", default-features = false, features = ["color-auto", "diff", "examples"] }
-clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "derive", "help"] }
+clap = { path = "../", default-features = false, features = ["std", "derive", "help"] }
 
 [[example]]
 name = "dynamic"
@@ -51,5 +52,5 @@ required-features = ["unstable-dynamic"]
 
 [features]
 default = []
-unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:unicode-xid", "clap/derive", "dep:is_executable", "dep:pathdiff"]
-debug = ["clap/debug"]
+unstable-dynamic = ["dep:clap_lex", "dep:shlex", "dep:unicode-xid", "clap_derive", "dep:is_executable", "dep:pathdiff"]
+debug = ["clap_builder/debug"]
